[package]
name = "r2d2_redis2"
version = "0.23.3"
authors = ["keesh.zhang<chunhui2001@gmail.com>"]
license = "MIT"
description = "Redis support for the r2d2 connection pool"
repository = "https://github.com/chunhui2001/r2d2-redis"
documentation = "https://docs.rs/r2d2_redis2/0.23.3"
keywords = ["redis", "pool", "database", "r2d2"]
include = ["src/**/*", "LICENSE", "Cargo.toml"]

[dependencies]
r2d2 = "0.8"
# redis = "0.20.0"
redis = "0.23.3"
